feat: search function

--- a/src/app/features/board/board-header/board-header.html
+++ b/src/app/features/board/board-header/board-header.html
@@ -1,7 +1,7 @@
 <div class="board-header">
     <h2>Board</h2>
     <div class="board-header-actions">
-        <app-board-search></app-board-search>
-        <app-board-add-button (addTaskClicked)="onAddTaskClick($event)"></app-board-add-button>
+        <app-board-search (search)="onSearch($event)"></app-board-search>
+        <app-board-add-button></app-board-add-button>
     </div>
 </div>
