feat: error message "no Tasks found"

--- a/src/app/features/board/board-header/board-add-button/board-add-button.html
+++ b/src/app/features/board/board-header/board-add-button/board-add-button.html
@@ -1,4 +1,4 @@
-<button (click)="onAddTaskClick()" class="add-task-button">
+<button class="add-task-button" (click)="onClick()">
     <span class="button-text">Add task</span>
     <span class="plus-icon">+</span>
 </button>
