--- a/src/app/features/board/board-header/board-header.html
+++ b/src/app/features/board/board-header/board-header.html
@@ -1,7 +1,10 @@
 <div class="board-header">
     <h2>Board</h2>
     <div class="board-header-actions">
-        <app-board-search (search)="onSearch($event)"></app-board-search>
-        <app-board-add-button></app-board-add-button>
+        <app-board-search 
+          [searchError]="searchError"
+          (search)="onSearch($event)">
+        </app-board-search>
+        <app-board-add-button (clicked)="onButtonClick()"></app-board-add-button>
     </div>
 </div>
