--- a/src/app/features/board/board-header/board-search/board-search.html
+++ b/src/app/features/board/board-header/board-search/board-search.html
@@ -1,11 +1,18 @@
-<div class="search-container">
-  <input 
-    type="text" 
-    class="search-input" 
-    placeholder="Find Task"
-    [(ngModel)]="searchValue"
-    (input)="onSearchInput()">
-  <button class="search-button">
-    <img src="assets/board/search-task.png" alt="Search">
-  </button>
+<div class="search-group">
+  <div class="error-container">
+    @if (searchError) {
+    <span class="error-text">{{ searchError }}</span>
+    }
+  </div>
+  <div class="search-container" [class.error]="searchError">
+    <input 
+      type="text" 
+      class="search-input" 
+      placeholder="Find Task"
+      [(ngModel)]="searchValue"
+      (input)="onSearchInput()">
+    <button class="search-button">
+      <img src="assets/board/search-task.png" alt="Search">
+    </button>
+  </div>
 </div>
