--- a/src/app/features/board/board-columns/board-columns.html
+++ b/src/app/features/board/board-columns/board-columns.html
@@ -13,7 +13,7 @@
         </div>
         } @else {
         @for (task of tasks; track task.id) {
-        <app-task-card [task]="task"></app-task-card>
+        <app-task-card [task]="task" (cardClicked)="onTaskClick($event)"></app-task-card>
         }
         }
     </div>
