style: modal footer fix

--- a/src/app/features/board/task-modal/task-modal.scss
+++ b/src/app/features/board/task-modal/task-modal.scss
@@ -574,7 +574,7 @@ form {
 // Footer
 .modal-footer {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: space-between;
   margin-top: auto;
   padding-top: 32px;
