fix: pattern bug in task-modal

--- a/src/app/features/board/task-modal/task-modal.html
+++ b/src/app/features/board/task-modal/task-modal.html
@@ -30,7 +30,7 @@
               <div class="date-input-container">
                 <input type="text" [(ngModel)]="dueDate" name="dueDate" placeholder="dd/mm/yyyy"
                   [class.error]="dueDateError" (input)="formatDateInput($event)" (change)="dueDateError = false"
-                  maxlength="10" pattern="[0-9/]*" inputmode="numeric" required />
+                  maxlength="10" pattern="[0-9\/]*" inputmode="numeric" required />
                 <button type="button" class="calendar-icon-btn" (click)="openDatePicker()">
                   <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
