--- a/src/app/features/board/board-header/board-header.scss
+++ b/src/app/features/board/board-header/board-header.scss
@@ -1,7 +1,9 @@
 .board-header {
+  height: 232px;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   gap: 40px;
   max-width: 1688px;
   padding: 0 64px;
@@ -20,7 +22,6 @@
     display: flex;
     align-items: flex-end;
     gap: 35px;
-    width: 100%;
   }
 }
 
@@ -36,7 +37,7 @@
 
     .board-header-actions {
       width: 100%;
-      
+
       app-board-search {
         width: 100%;
       }
