--- a/src/app/features/board/board.html
+++ b/src/app/features/board/board.html
@@ -5,27 +5,19 @@
 
     <div class="board-columns-wrapper">
         @for (column of columns; track column.id) {
-        <app-board-columns 
-            [title]="column.title" 
-            [tasks]="column.tasks" 
-            [columnId]="column.id"
-            [showAddButton]="column.id !== 'done'"
-            (addTaskClicked)="openAddTaskModal($event)"
-            (taskClicked)="openViewTaskModal($event)"
-            (taskDropped)="onTaskDrop($event)">
+        <app-board-columns [title]="column.title" [tasks]="column.tasks" [columnId]="column.id"
+            [showAddButton]="column.id !== 'done'" (addTaskClicked)="openAddTaskModal($event)"
+            (taskClicked)="openViewTaskModal($event)" (taskDropped)="onTaskDrop($event)"
+            (subtaskToggled)="onSubtaskToggled($event)">
         </app-board-columns>
         }
     </div>
-    
+
     <app-task-modal [showModal]="showAddTaskModal" [defaultStatus]="defaultStatus" (closeModal)="closeAddTaskModal()"
         (taskCreated)="handleTaskCreated($event)">
     </app-task-modal>
 
-    <app-show-task-modal 
-        [showModal]="showViewTaskModal" 
-        [task]="selectedTask"
-        (closeModal)="closeViewTaskModal()" 
-        (editTask)="handleEditTask($event)"
-        (deleteTask)="handleDeleteTask($event)">
+    <app-show-task-modal [showModal]="showViewTaskModal" [task]="selectedTask" (closeModal)="closeViewTaskModal()"
+        (editTask)="handleEditTask($event)" (deleteTask)="handleDeleteTask($event)">
     </app-show-task-modal>
 </div>
